# meson-test-project

./: README.md  meson.build  meson_test_project.cpp
tests/: gtest-all.cpp  meson.build
